--- a/Notebooks/prepare_datasets.ipynb
+++ b/Notebooks/prepare_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "data_root = Path('/pio/scratch/1/recommender_systems/')\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def create_k_core(pdf, k, k_users=None, k_items=None):\n",
@@ -56,7 +56,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Clothes 10-core"
+    "# Clothes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Creating 10-core"
    ],
    "metadata": {
     "collapsed": false
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "clothes_pdf = pd.read_parquet(data_root / 'interim' / 'Amazon' / 'Clothing_Shoes_and_Jewelry_clean.parquet')"
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "clothes_10_core_pdf = create_k_core(clothes_pdf, 10)"
@@ -92,10 +104,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "clothes_10_core_pdf.to_parquet(project_root / 'Data' / 'clothes_10_core.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Inactive users variant a - train test split"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "clothes_10_core_pdf = pd.read_parquet(project_root / 'Data' / 'clothes_10_core.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "test_users = np.random.choice(clothes_10_core_pdf['reviewerID'].value_counts().where(lambda x: x == 10).dropna().index, 10000, replace=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "train_pdf = []\n",
+    "test_pdf = []\n",
+    "\n",
+    "for user, pdf in clothes_10_core_pdf.groupby('reviewerID'):\n",
+    "    if user not in test_users:\n",
+    "        train_pdf.append(pdf)\n",
+    "    else:\n",
+    "        sample_pdf = pdf.sample(5)\n",
+    "        test_pdf.append(sample_pdf)\n",
+    "        train_pdf.append(pdf[~pdf.index.isin(sample_pdf.index)])\n",
+    "\n",
+    "train_pdf = pd.concat(train_pdf)\n",
+    "test_pdf = pd.concat(test_pdf)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "train_pdf.to_parquet(project_root / 'Data' / 'inactive_a_train.parquet')\n",
+    "test_pdf.to_parquet(project_root / 'Data' / 'inactive_a_test.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Inactive users variant b"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "def get_inactive(pdf, k_users, k_items, max_users):\n",
+    "    while(\n",
+    "        np.any(pdf['asin'].value_counts() < k_items)\n",
+    "        or np.any(pdf['reviewerID'].value_counts() < k_users)\n",
+    "        or np.any(pdf['reviewerID'].value_counts() > max_users)\n",
+    "    ):\n",
+    "        items_to_keep = pdf['asin'].value_counts().where(lambda x: x >= k_items).dropna().index\n",
+    "        users_to_keep = pdf['reviewerID'].value_counts().where(lambda x: (k_users <= x) & (x <= max_users)).dropna().index\n",
+    "        pdf = pdf[pdf['asin'].isin(items_to_keep) & pdf['reviewerID'].isin(users_to_keep)]\n",
+    "\n",
+    "    return pdf"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "clothes_pdf = pd.read_parquet(data_root / 'interim' / 'Amazon' / 'Clothing_Shoes_and_Jewelry_clean.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "inactive_pdf = get_inactive(clothes_pdf, 7, 10, 15)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "test_users = np.random.choice(inactive_pdf['reviewerID'].value_counts().where(lambda x: x == 10).dropna().index, 10000, replace=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "train_pdf = []\n",
+    "test_pdf = []\n",
+    "\n",
+    "for user, pdf in inactive_pdf.groupby('reviewerID'):\n",
+    "    if user not in test_users:\n",
+    "        train_pdf.append(pdf)\n",
+    "    else:\n",
+    "        sample_pdf = pdf.sample(5)\n",
+    "        test_pdf.append(sample_pdf)\n",
+    "        train_pdf.append(pdf[~pdf.index.isin(sample_pdf.index)])\n",
+    "\n",
+    "train_pdf = pd.concat(train_pdf)\n",
+    "test_pdf = pd.concat(test_pdf)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "train_pdf.to_parquet(project_root / 'Data' / 'inactive_b_train.parquet')\n",
+    "test_pdf.to_parquet(project_root / 'Data' / 'inactive_b_test.parquet')"
    ],
    "metadata": {
     "collapsed": false,
