Change the preparation of dataset for variant b

--- a/Notebooks/prepare_datasets.ipynb
+++ b/Notebooks/prepare_datasets.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def get_inactive(pdf, k_users, k_items, max_users):\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "clothes_pdf = pd.read_parquet(data_root / 'interim' / 'Amazon' / 'Clothing_Shoes_and_Jewelry_clean.parquet')"
@@ -243,10 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "outputs": [],
    "source": [
-    "inactive_pdf = get_inactive(clothes_pdf, 7, 10, 15)"
+    "temp_pdf = get_inactive(clothes_pdf, 5, 10, 10)"
    ],
    "metadata": {
     "collapsed": false,
@@ -257,10 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "outputs": [],
    "source": [
-    "test_users = np.random.choice(inactive_pdf['reviewerID'].value_counts().where(lambda x: x == 10).dropna().index, 10000, replace=False)"
+    "random_users = np.random.choice(temp_pdf['reviewerID'].unique(), 300000, replace=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -271,7 +271,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "temp_pdf = temp_pdf[temp_pdf['reviewerID'].isin(random_users)]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "inactive_pdf = get_inactive(temp_pdf, 5, 10, 10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(190803, 30433)"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(inactive_pdf['reviewerID'].unique()), len(inactive_pdf['asin'].unique())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "test_users = np.random.choice(inactive_pdf['reviewerID'].value_counts().where(lambda x: x >= 8).dropna().index, 10000, replace=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "train_pdf = []\n",
@@ -282,8 +347,8 @@
     "        train_pdf.append(pdf)\n",
     "    else:\n",
     "        sample_pdf = pdf.sample(5)\n",
-    "        test_pdf.append(sample_pdf)\n",
-    "        train_pdf.append(pdf[~pdf.index.isin(sample_pdf.index)])\n",
+    "        train_pdf.append(sample_pdf)\n",
+    "        test_pdf.append(pdf[~pdf.index.isin(sample_pdf.index)])\n",
     "\n",
     "train_pdf = pd.concat(train_pdf)\n",
     "test_pdf = pd.concat(test_pdf)"
@@ -297,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "train_pdf.to_parquet(project_root / 'Data' / 'inactive_b_train.parquet')\n",
